--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,12 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  width: 100%;
+  height: 100%;
+  background-color: lightgray;
+  /* display: flex;
+  justify-content: center;
+  align-items: center; */
 }
 
 code {
